@@ -157,9 +157,10 @@ nothing else.
 </p>
 
 <p>
- A semantic difference with <tt>mdev</tt> is that a <tt>*</tt> command will
+ A semantic difference with <tt>mdev</tt> is that a <tt>*</tt> directive will
 be run on <em>every</em> action type, not just <tt>ACTION=add</tt> and
-<tt>ACTION=remove</tt>.
+<tt>ACTION=remove</tt>. A <tt>&amp;</tt> directive is in the same case (see
+the paragraph below).
 </p>
 
 <h3> execline command support </h3>
