@@ -25,6 +25,8 @@
 dependency bumped to 2.11.0.0. </li>
  <li> New <tt>-O nlgroups</tt> option to mdevd, rebroadcasting
 uevents to the netlink after handling them. </li>
+ <li> The <tt>*</tt> and <tt>&amp;</tt> action directives are now
+triggered by all action types. </li>
 </ul>
 
 <h2> in 0.1.4.0 </h2>
