@@ -5,6 +5,7 @@ In 0.1.5.0
 
  - Adaptation to skalibs-2.11.0.0.
  - New mdevd option: -O nlgroups, to rebroadcast uevents to netlink
+ - The * and & directives are now triggered by all action types.
 
 
 In 0.1.4.0
